# paper-badger

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  python-package.yml
sample_papers/trivial_even_note/: main.tex
src/paper_badger/: __init__.py  agents.py  arxiv.py  badges.py  cli.py  dashboard.py  latex.py  models.py  workflow.py
tests/: test_agents.py  test_cli.py  test_dashboard.py  test_latex.py  test_workflow.py
